# GCM

./: README.md  pyproject.toml  requirements.txt
afes_venus_jax/: __init__.py  __main__.py  cli.py  config.py  diffusion.py  driver.py  friction.py  grid.py  implicit.py  initial_conditions.py  io.py  spectral.py  spharm.py  state.py  t42l60_config.py  tendencies.py  timestep.py  vertical.py
afes_venus_jax/config/: __init__.py  afes_venus_paper.yaml  venus_t42l60.yaml
afes_venus_jax/dynamics/: __init__.py  integrators.py  nonlinear.py  semi_implicit.py
afes_venus_jax/examples/: afes_paper_reproduction.py  run_and_movie.py  superrotation_demo.py  t42l60_low_diffusion_guided.py  t42l60_venus_balanced_spinup.py  t42l60_venus_dry_spinup.py
afes_venus_jax/experiments/: rotating_superrotation.py
afes_venus_jax/physics/: __init__.py  newtonian.py  solar.py
afes_venus_jax/tests/: conftest.py  test_diffusion.py  test_driver.py  test_example_spinup.py  test_initial_condition.py  test_operators.py  test_physics.py  test_rotating_superrotation.py  test_run_and_movie.py  test_short_spinup.py  test_si_step.py  test_smoke_t42l60.py  test_time_filter.py  test_transforms.py
tests/: conftest.py  test_grid.py  test_t42l60_balanced_spinup.py  test_t42l60_spinup_stability.py  test_t42l60_temperature_bounds.py
